--- a/apps/gallery/style/gallery.css
+++ b/apps/gallery/style/gallery.css
@@ -201,21 +201,30 @@ body.pickView #thumbnails {
   width:100%;
   float:left;
 }
+
+/* Bug 968311 - Keep Gallery in scrollable
+ * background color. Need in all three
+ * containers below.
+ */
 .thumbnail-group-container {
   padding: 0;
+  background-color: #444;
 }
 
 #thumbnails>li {
   /* no list item bullets */
   list-style-type: none;
+  background-color: #444;
 }
 
+#thumbnails>li>ul {
+  background-color: #444;
+}
 
 #thumbnails>li:first-child .thumbnail-group-header {
   border-top: 0.1rem solid;
   border-color:rgba(255,255,255, 0.1);
 }
-
 
 .thumbnail {
   margin-right: 0.1rem;
