--- a/apps/sms/style/sms.css
+++ b/apps/sms/style/sms.css
@@ -116,6 +116,11 @@ form[role="dialog"][data-type="edit"] header menu[type="toolbar"] button {
 
 #threads-container[data-type="list"] ul {
   padding: 0 1.5rem;
+
+  /* Bug 967878 - [Messages] Background doesn't scroll with the threads causing
+  * expensive over-invalidation
+  */
+  background-color: white;
 }
 
 [data-type="list"] li {
